# paint

./: .gitignore  CMakeLists.txt  clang-format.txt
src/: CMakeLists.txt  main.cpp
